# SenShaMart

./: .eslintrc.json  .gitignore  APIs.md  How_To_Register_a_Sensor.md  How_to_query_and_integrate.md  INSTALLATION.md  Notes  Query.json  README.md  SenShaMart Project_User manual.docx  Sensor_Registration.md  babel.config.json  blocks.json  chain-util.js  config.js  constants.js  nodemon.json  p2p-server.js  package-lock.json  package.json  settings.json  technical_limitations_and_notes.md  tsconfig.json
app/: index.js  miner.js  p2p-server.js  swagger.js  swagger_output.json
blockchain/: block.js  block.test.js  block.ts  blockchain.js  blockchain.test.js  blockchain.ts  broker-registration.js  broker-registration.test.js  broker-registration.ts  commit.ts  compensation.js  compensation.ts  index.js  integration.js  integration.test.js  integration.ts  payment.js  payment.test.js  payment.ts  persistence.ts  rds-store.js  rds-store.ts  sensor-registration.js  sensor-registration.test.js  sensor-registration.ts  transaction.js  transaction_base.ts  transaction_wrapper.ts  uris.js  uris.ts  witnessed.ts
broker/: broker-app.js  broker-app.ts  broker.js  broker.ts.ignore
demo/: CMakeLists.txt  installation.txt  test.webm
demo/camera_client/: CMakeLists.txt  FindFFmpeg.cmake
demo/camera_client/dependencies/libvisiontransfer/: CMakeLists.txt  README.md
demo/camera_client/dependencies/libvisiontransfer/python/: setup.py
demo/camera_client/dependencies/libvisiontransfer/python/tools/: autogen_docstrings.py  autogen_parameters.py  generate_sources.py
demo/camera_client/dependencies/libvisiontransfer/python/visiontransfer_src/: visiontransfer.pyx.in  visiontransfer_cpp.pxd.in
demo/camera_client/dependencies/libvisiontransfer/python3-egg/: visiontransfer-9.0.2-py3.8-linux-x86_64.egg
demo/camera_client/dependencies/libvisiontransfer/python3-wheel/: visiontransfer-9.0.2-cp38-cp38-linux_x86_64.whl
demo/camera_client/dependencies/libvisiontransfer/visiontransfer/: CMakeLists.txt  alignedallocator.h  asynctransfer.cpp  asynctransfer.h  bitconversions.cpp  bitconversions.h  common.h  datablockprotocol.cpp  datablockprotocol.h  datachannel-control.h  datachannel-imu-bno080.cpp  datachannel-imu-bno080.h  datachannelservice.h  datachannelservicebase.cpp  datachannelservicebase.h  deviceenumeration.cpp  deviceenumeration.h  deviceinfo.h  deviceparameters.cpp  deviceparameters.h  exceptions.h  imagepair.h  imageprotocol.cpp  imageprotocol.h  imageset-opencv.h  imageset.cpp  imageset.h  imagetransfer.cpp  imagetransfer.h  internalinformation.cpp  internalinformation.h  networking.cpp  networking.h  parameterinfo.h  parametertransfer.cpp  parametertransfer.h  parametertransferdata.h  protocol-sh2-imu-bno080.h  reconstruct3d-open3d.h  reconstruct3d-pcl.h  (+7 more)
demo/camera_client/nerian_stream_unified/: nerian_stream_unified.cpp
demo/camera_client/public_include/senshamart/client/: camera.hpp
demo/camera_client/scratch/: scratch.cpp
demo/camera_client/src/: camera.cpp
demo/demo_show_video/: CMakeLists.txt
demo/demo_show_video/src/: demo_show_video.cpp
demo/milk_client/: CMakeLists.txt
demo/milk_client/src/: etl.cpp
demo/sensor_client/: CMakeLists.txt
demo/sensor_client/public_include/senshamart/: senshamart_client.hpp
demo/sensor_client/src/: senshamart_client.cpp
deployment/: cumulocity_template.service  init_instance.bat  senshamart_broker.service  senshamart_demo.service  senshamart_miner.service  senshamart_wallet.service  update_broker.bat  update_camera_demo.bat  update_miner.bat  update_wallet.bat  update_wallet_pw.bat
keygen/: keygen-app.js  keygen-app.ts
load_testing/: dump  gen_settings.json
miner/: miner-app.js  miner-app.ts  miner.js  miner.ts
network/: blockchain-prop.js  blockchain-prop.ts  scratch.js
public_wallet/: public-wallet-app.ts  public-wallet.ts
sensor/: sensor-app.js  sensor.js
tools/: blockchain_sharer.ts  clean_fuseki.ts  dummy_consumer.ts  dummy_sensor.ts  gen_blockchain.ts  regenerate_fuseki.ts
ui/: application.html  application.js  application.ts  broker.html  broker.js  broker.ts  brokerList.ts  demo-logic.js  (+12 more)
(+77 files in other folders)
